# dg_riegrova_webAPI

./: .gitignore  README.md  pyproject.toml
src/dg_riegrova_webAPI/: RiegrovaWebAPI.py
